...
  @RequiresApi(Build.VERSION_CODES.O) val localDate: StateFlow<LocalDate> = _localDate

  private val categoriesList =
      MutableStateFlow<ImmutableList<CategoryItem>>(
          persistentListOf(
              CategoryItem(name = "Здоровье", imageRes = R.drawable.ic_health),
              CategoryItem(name = "Еда", imageRes = R.drawable.ic_food),
              CategoryItem(name = "Развлечения", imageRes = R.drawable.ic_entertainment),
              CategoryItem(name = "Транспорт", imageRes = R.drawable.ic_transport),
              CategoryItem(name = "Путешествия", imageRes = R.drawable.ic_travel),
              CategoryItem(name = "Дом", imageRes = R.drawable.ic_spends),
              CategoryItem(name = "Одежда", imageRes = R.drawable.ic_clothes),
              CategoryItem(name = "Другое", imageRes = R.drawable.ic_money),
          ))

  @RequiresApi(Build.VERSION_CODES.O)
...
