...
                    Text(
                        text =
                            stringResource(id = com.example.cost_accounting.R.string.mentioned_sum))
                    Spacer(modifier = Modifier.height(8.dp))
                    if (isErrorShown) {
                      Text(
                          modifier = Modifier.testTag("input_error"),
                          text =
                              stringResource(
                                  id = com.example.cost_accounting.R.string.complete_field),
                          color = colorResource(id = R.color.red_600))
                    }
                    TextField(
...
                                  isErrorShown = true
                                } else {
                                  onAccept.invoke(sum.toDoubleOrNull(), comments)
                                  onDismiss()
                                }
                              }) {
                                Text(text = stringResource(id = com.example.cost_accounting.R.string.ok), modifier = Modifier.testTag("alert_confirm_button"))
                              }
                        }
                  }
            }
      }
}
...
